--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,83 @@
-input {
-    display: block;
+.form-container {
+    display: flex;
+    justify-content: center;
+    background: #e0ddd5;
+    border-radius: 10px;
+    border: 5px solid #e0ddd5;
+    align-self: center;
 }
-input[type=number] {
-    -moz-appearance: textfield;
+
+form {
+    width: 50%
+}
+.column {
+    width: 100%;
+}
+.two-columns {
+    display: flex;
+    flex-wrap: wrap;
+}
+.five-columns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.one-column .item {
+
+    box-sizing: border-box;
+    color: #171e42;
+    padding: 10px;
+}
+
+.two-columns .item {
+    flex: 50%;
+    box-sizing: border-box;
+    color: #171e42;
+    padding: 10px;
+}
+.five-columns .radio-button {
+    flex: 25%;
+    box-sizing: border-box;
+    color: #171e42;
+    padding: 10px;
+    text-align: center;
+}
+
+.column input {
+     width: 100%;
+     padding: 12px 20px;
+     margin: 8px 0;
+     box-sizing: border-box;
+     color: black;
+     border: none;
+     border-radius: 10px;
+     transition: box-shadow 0.5s ease-in-out;
+
+ }
+
+.column textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    height: 8vw;
+    box-sizing: border-box;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    transition: box-shadow 0.5s ease-in-out;
+
+}
+
+.column textarea:focus, input:focus {
+    font-weight: bold;
+    outline: none;
+
+}
+
+.column textarea:hover, input[type=text]:hover {
+    box-shadow: 0px 0px 22px -2px #000000;
+}
+
+.error {
+    background-color: red;
 }
