--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 .form-container {
     display: flex;
     justify-content: center;
-    background: #e0ddd5;
-    border-radius: 10px;
-    border: 5px solid #e0ddd5;
     align-self: center;
 }
 
 form {
-    width: 50%
+    background: #e0ddd5;
+    border-radius: 10px;
+    border: 5px solid #e0ddd5;
+    width: 50%;
+    padding: 15px;
+    margin: 50px;
 }
 .column {
     width: 100%;
@@ -78,6 +80,49 @@ form {
     box-shadow: 0px 0px 22px -2px #000000;
 }
 
+.button:hover {
+    box-shadow: 0px 0px 22px -2px #000000;
+}
+.one-column .button {
+    float: right;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    border-radius: 15px;
+    padding: 15px 32px;
+    cursor: pointer;
+    transition: box-shadow 0.5s ease-in-out;
+
+}
+
+textarea {
+    font-family: inherit;
+    font-size: inherit;
+}
 .error {
-    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    background-color: #f8d7da;
+    color: #861c24;
+    font-weight: bold;
+    margin: 10px
+}
+
+form > h1 {
+text-align: center;
+font-style: italic;
+
+}
+
+form > h3 {
+    text-align: center;
+    font-style: italic;
+}
+form > .separator {
+    align-self: center;
+    margin-bottom: 50px;
+    width: 100%;
+    height: 2px;
+    background-color: #efefef;
 }
