Added errors in react-form-hook

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ textarea {
     background-color: #f8d7da;
     color: #861c24;
     font-weight: bold;
-    margin: 10px
+    margin: 10px;
 }
 
 form > h1 {
