--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ form {
 
 }
 
-.column textarea:hover, input[type=text]:hover {
+.column textarea:hover, input[type=text]:hover, input[type=number]:hover {
     box-shadow: 0px 0px 22px -2px #000000;
 }
 
@@ -128,8 +128,52 @@ form > .separator {
 }
 
 /* Fruits */
-.container-fruits {
+.container-fruits .fruit-item {
     display: flex;
     justify-content: center;
     align-self: center;
+    flex-direction: row;
+
+
+}
+.container-fruits .fruit-item button {
+    height: 34px;
+    width: 50px;
+    background:#f2f2f2;
+    border-radius:4px;
+    padding:8px 5px 8px 5px;
+    border:1px solid #ddd;
+    text-align: center;
+    align-self: center;
+    margin: 10px 10px;
+
+}
+.container-fruits p {
+    height:34px;
+    width: 100px;
+    text-align: center;
+    font-size: 26px;
+    border:1px solid #ddd;
+    border-radius:4px;
+    display: inline-block;
+}
+
+.container-fruits .fruit-item h4 {
+    align-self: center;
+    height: 30px;
+    position: absolute;
+    padding-bottom: 7vw;
+
+}
+.container-fruits .reset {
+    display: flex;
+    background:#f2f2f2;
+    border-radius:4px;
+    padding:8px 5px 8px 5px;
+    border:1px solid #ddd;
+    text-align: center;
+    align-self: center;
+    margin: auto;
+    width: 20vw;
+
 }
